--- a/css/xhtml.css
+++ b/css/xhtml.css
@@ -1,11 +1,11 @@
 .semantic-true {
-	background-color: #7E7E7E;
+	background-color: #e5e5e5;
 	text-align: center;
 	font-weight: bold;
 }
 
 .semantic-false {
-	background-color: #F2F2F2;
+	background-color: #e5e5e5;
 	text-align: center;
 	font-weight: bold;
 }
@@ -13,27 +13,27 @@
 .tag {
 	text-align: left;
 	font-weight: bold;
-	background-color: #F5F5F0
+	background-color: #efefef
 }
 
 .description {
 	text-align: left;
-	background-color: #E0E0D1
+	background-color: #d1d1d1
 }
 
 .inline-true {
 	text-align: center;
-	background-color: #86867D;
+	background-color: #efefef;
 	font-weight: bold;
 }
 
 .nothing {
-	background-color: black
+	background-color: #efefef
 }
 
 .block-true {
 	text-align: center;
-	background-color: #F2F2F1;
+	background-color: #efefef;
 	font-weight: bold;
 }
 
@@ -47,7 +47,7 @@ th {
 	text-align: center;
 	border-left-width: 0px;
 	border-right-width: 0px;
-	background-color: #e5e5e5;
+	background-color: #bebebe;
 }
 
 table {
